Dev-RBI/src/objects/Unit_Type__c.object
<CustomObject>
    <fields>
        <fullName>Built_up_area_Sq_Ft__c</fullName>
        <label>Built up area (Sq Ft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carpet_Area_Sq_Ft__c</fullName>
        <label>Carpet Area (Sq Ft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Unit Type</relationshipLabel>
        <relationshipName>Unit_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Super_Area_Sq_Ft__c</fullName>
        <label>Super Area (Sq Ft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Type_Hyperlink__c</fullName>
        <description>This field is used in the related list of the project for the hyperlink</description>
        <formula>HYPERLINK(&quot;/&quot;+Id,   TEXT( Unit_Type__c ) , &quot;_blank&quot;)</formula>
        <label>Unit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <label>Unit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Service Appt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 BHK + STUDY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2BHK + STUDY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 BHK + SERVANT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 BHK + STUDY + SERVANT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 BHK + STUDY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 BHK + SERVANT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 BHK + STUDY + SERVANT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4BHK + STUDY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 BHK + SERVANT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 BHK + STUDY + SERVANT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5BHK + STUDY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 BHK + SERVANT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 BHK + STUDY + SERVANT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penthouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2BHK+ STUDY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5BHK+ STUDY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Unit Type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UNITTYP-{0000000000}</displayFormat>
        <label>Unit Type Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>